@@ -30,6 +30,14 @@
     <dd><textarea id="style"></textarea></dd>
   </dl>
 </div>
+<div>Popup styles
+  <dl>
+    <dt><label for="popup-body-width">Body width</dt>
+    <dd><input type="text" id="popup-body-width"></dd>
+    <dt><label for="popup-body-height">Body height</dt>
+    <dd><input type="text" id="popup-body-height"></dd>
+  </dl>
+</div>
 <div><button id="save">Save</button><button id="show-default">Show default</button></div>
 <div id="message"></div>
 </body>
